Feature: add JS context via CBV methods and access via JS API (#2)

--- a/js_tests/test.html
+++ b/js_tests/test.html
@@ -1,4 +1,8 @@
 <!doctype html>
 <html>
-    <body></body>
+  <body>
+    <script id="js_context_data" type="application/json">
+      {"myNumber": 5, "myString": "this is a string"}
+    </script>
+  </body>
 </html>
