Refactor and improve coverage of JavaScript tests

--- a/js_tests/test.html
+++ b/js_tests/test.html
@@ -22,6 +22,14 @@
               "args": {
                 "num": "int"
               }
+            },
+            "fake:named_page": {
+              "name": "fake:named_page",
+              "route": "/\u003Cslug:slug\u003E/\u003Cint:num\u003E",
+              "args": {
+                "slug": "slug",
+                "num": "int"
+              }
             }
           }
         },
