Register custom path converters via JavaScript API

--- a/js_tests/test.html
+++ b/js_tests/test.html
@@ -30,6 +30,13 @@
                 "slug": "slug",
                 "num": "int"
               }
+            },
+            "fake:custom_converter": {
+              "name": "fake:custom_converter",
+              "route": "/articles/\u003Cyyyy:year\u003E",
+              "args": {
+                "year": "yyyy"
+              }
             }
           }
         },
